--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "preinstall": "npx npm-force-resolutions",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "@babel/preset-env": "^7.8.7"
   },
   "eslintConfig": {
     "extends": "react-app"
